css/style.css
/* ... */
/*.toggleblock input[type="checkbox"] {*/
.unsichtbar {
	position: absolute;
	left: -900em;
	top: auto;
	overflow: hidden;
}
.toggleblock input[type="checkbox"] ~ .toggleitem {
	display: none;
}
/*.toggleblock label[class$="hover"]:hover ~ .toggleitem, .toggleblock input[type="checkbox"]:checked ~ .toggleitem,/**/
.toggleblock label ~ .toggleitem, .toggleblock input[type="checkbox"]:checked ~ .toggleitem {
	display: inline-block;
}
.toggleblock label:hover,
.toggleblock input[type="checkbox"]:checked + label {
	background-color: red;
	color: black;
	font-weight: bold;
	cursor: pointer;
}


.close a::after{
	margin-top:1em;
	content:"schließen";
}
.boxshadow {
	-moz-box-shadow: 2px 2px 2px 2px #ff0;
	box-shadow: 5px 5px 5px 3px #666;/*#ffc;/**/
}
#wiedemann-foto-figure {
	float: right;
	margin: 0 0 0 2em;
}
.hflip {
	transform: scaleX(-1);
}.vflip {
	transform: scaleY(-1);
}
.blk {
	display: block;
}
.ilblk {
	display: inline-block;
}
nav > ul li label {
	background: rgba(0,0,0,0) !important;
	vertical-align: top;
}
#loginframe {
	border: 0;
	width: 200px;
	height: 300px;
	overflow: hidden;
}
.strike {
	text-decoration: line-through;
}
fieldset {
	border: 1px solid black;
}

